# file-converter-puc-ia

./: README.rst  pyproject.toml
.github/workflows/: python-publish.yml
file_converter/: csv2json.py  file_converter.py  json2csv.py  utils.py
tests/: test_csv2json.py  test_file_converter.py  test_file_converter_fgsm.py  test_json2csv.py  test_utils.py
tests/data/: sample_csv_missing_info.csv
tests/data/csv_data/: sample_csv_colon.csv  sample_csv_semi_colon.csv  sample_csv_tab.csv
tests/data/csv_data/sample_dir/: sample_csv_comma3.csv
tests/data/json_data/: sample_json.json  sample_json_missing_info.json
