[tool.poetry]
name = "file-converter-fgsm"
packages = [
    {include = "file_converter"}
]
version = "0.1.0"
description = ""
authors = ["Fillipe Goulart <fillipe.gsm@tutanota.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.28.0"
ipdb = "^0.13.9"
black = "^21.9b0"
flake8 = "^4.0.1"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
disable="""
invalid-name
"""

[tool.pylint.format]
max-line-length=79

[tool.black]
line-length = 79

[tool.poetry.scripts]
file_converter = "file_converter.file_converter:file_converter"
